# skeintest

./: Cargo.toml
assets/: anim.blend  anim.blend1  anim.glb  test.glb  test.gltf
assets/models/: anim.blend  anim.blend1  anim.glb  building.glb  character.blend  character.blend1  character.glb  character.gltf  figure.glb  pdp10.glb
src/: main.rs
